@@ -10,7 +10,7 @@ plugins.zm_captcha.version = 0.2.0
 plugins.zm_product_music_info.version = 0.2.0
 plugins.zm_crossell.version = 0.1.0
 plugins.zm_google_store_locator.version = 0.2.0
-plugins.zm_smarty.version = 0.1.0
+plugins.zm_smarty.version = 0.2.0
 plugins.zm_master_password.version = 0.1.0
 plugins.zm_recaptcha.version = 0.1.0
 plugins.zm_php_bb.version = 0.1.0
